Version 0.7 - July 3rd, 2010
============================
Added several features borrowed from flask-babel:

- Added configuration for date/time formats.
- Added 'rebase' keyword argument to format_date(), format_datetime() and
  format_time(), to only convert the date/time to the currently loaded
  timezone if it is True (default to True).
- Added list_translations().


Version 0.6 - June 30, 2010
===========================
- Added optional keyword variables to format translations returned by gettext(),
  ngettext(), lazy_gettext() and lazy_ngettext().


Version 0.5.6 - June 27, 2010
=============================
- Removed normalize_callable, not used anyway and removed from tipfy 0.5.7.


Version 0.5.5 - June 1st, 2010
==============================
- Fixed namespace warnings.


Version 0.5.4 - May 31, 2010
============================
- Initial release: moved from tipfy core to a separate extension.

